2008-03-10	Dmitry Dulepov	<dmitry@typo3.org>

	* Fixed bug #6567: autoconfgeneration ceate wrong config for defaultToHTMLsuffixOnPrev and acceptHTMLsuffix

2008-03-06  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #7486: tx_realurl_pathsegment is now exclude field
	* Fixed: _DEFAULT was ignored in TCEmain hook
	* Change path expiration behavior

2008-03-05  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed bug #6952: expireDays is not set correctly
	* Fixed bug #6416: if autoUpdatePathCache is true old urls are redirected not as 301
	* Added TCEMain hook to update path cache if page is renamed

2008-02-06  Dmitry Dulepov  <dmitry@typo3.org>

	* Fixed error #6849: Error on 404/Page Not Found
	* Updated function index with extdeveval

2008-01-18  Dmitry Dulepov  <dmitry@typo3.org>

 * Added eol-style property for all text files
 * Fixed another incarnation of postVarSet issue

2008-01-07  Dmitry Dulepov  <dmitry@typo3.org>

 * Updated logo in manual

2007-11-28  Dmitry Dulepov  <dmitry@typo3.org>

 * Update information about config.baseURL in the documentation

2007-10-22  Dmitry Dulepov  <dmitry@typo3.org>

 * Removed svn:eol-style=native from all files because it caused problems with EM on *nix systems

2007-10-21  Dmitry Dulepov  <dmitry@typo3.org>

 * Updated documentation
 * Some files are reformatted according to conding conventions
 * Updated function index

2007-10-07  Dmitry Dulepov  <dmitry@typo3.org>

 * Fix: query string was reconstructed only when cache was not in use

2007-10-07  Dmitry Dulepov  <dmitry@typo3.org>

 * Added hooks for extensions to provide configuration
 * Autoconfiguration is moved to processing class
 * Removed lateAddToCache because it had bad side effects

2007-10-01  Dmitry Dulepov  <dmitry@typo3.org>

 * Fixed wrong intval on string md5

2007-09-20  Dmitry Dulepov  <dmitry@typo3.org>

 * Changed tx_realurl_urlencodecache and tx_realurl_urldecodecache to use full md5